# supergateway

./: .gitignore  AGENTS.md  README.md  docker-bake.hcl  zbpack.json
docker/: Dockerfile
docs/plans/: plan-keystone.md  plan-parity-anvil.md
rust/: Cargo.toml
rust/src/: config.rs  main.rs  types.rs
rust/src/gateways/: mod.rs  sse_to_stdio.rs  stdio_to_sse.rs  stdio_to_streamable_http.rs  stdio_to_ws.rs  streamable_http_to_stdio.rs
rust/src/runtime/: admin.rs  mod.rs  prompt.rs  store.rs
rust/src/support/: cors.rs  logger.rs  mod.rs  session_access_counter.rs  signals.rs  stdio_child.rs  telemetry.rs  version.rs
tests/: rustBaseUrl.test.ts  rustSseToStdio.test.ts  rustStreamableHttpToStdio.test.ts
