[package]
name = "supergateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
regex = "1.10"
uuid = { version = "1.7", features = ["v4"] }
futures = "0.3"
eventsource-stream = "0.2"
shell-words = "1.1"
tower-http = { version = "0.5", features = ["cors"] }
arc-swap = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-appender-tracing = "0.31"

[profile.release]
codegen-units = 1
lto = true
